<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JLM Shelter App</string>
    <string name="find_shelters">Find Nearest Shelters</string>
    <string name="nearest_shelters">Nearest Shelters</string>
    <string name="take_me_to_shelter">Take Me to Shelter</string>
    <string name="distance">Distance: %1$s meters</string>
    <string name="location_permission_required">Location permission is required to find nearby shelters</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="cancel">Cancel</string>
    <string name="error_loading_shelters">Error loading shelter data</string>
    <string name="loading">Loading...</string>
    <string name="back_to_map">Back to Map</string>
    <string name="my_location">My Location</string>
    <string name="close">Close</string>
    <string name="shelter_details">Shelter Details</string>
    <string name="shelter_category">%1$s</string>
    <string name="shelter_type_label">Shelter Type:</string>
    <string name="address_label">Address:</string>
    <string name="legend_title">Shelter Types</string>
    <string name="legend_parking">Underground Parking</string>
    <string name="legend_public">Public Shelter</string>
    <string name="legend_school">School Shelter</string>
</resources>
